# steel_lang

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: vm_bench.rs
benches/programs/: ackermann.steel  collatz.steel  enum_match.steel  fib10.steel  fib20.steel  fib30.steel  fib_iter.steel  gcd.steel  power.steel  struct_point.steel  sum_loop.steel
docs/: cli_usage.md  enums_and_pattern_matching.md  nil_safety.md  structs_and_methods.md  syntax_simple.md
examples/: box.steel  captures.steel  enums.steel  interface.steel  interface_complex.steel  linked_list.steel  list.steel  list2.steel  loop.steel  nil.steel  point.steel  poly.steel  redeclaration.steel  simil.steel  str_add.steel  test.steel  wrong_code.steel  zoo.steel
src/: ast.rs  lib.rs  main.rs  parser.rs  scanner.rs  stdlib.rs  token.rs  typechecker.rs
src/compiler/: analysis.rs  mod.rs
src/parser/: ast.rs  error.rs  expressions.rs  mod.rs  statements.rs
src/scanner/: mod.rs  span.rs  token.rs
src/typechecker/: arguments.rs  call_bindings.rs  declarations.rs  error.rs  expressions.rs  get_handles.rs  globals.rs  inference.rs  mod.rs  operators.rs  pattern_matching.rs  refinements.rs  resolver.rs  return_analysis.rs  scope_manager.rs  similarity.rs  statements.rs  system.rs  tests.rs  type_ast.rs  type_registry.rs  type_resolver.rs  type_system.rs  type_system_old.rs  types.rs
src/typechecker/check/: globals.rs  mod.rs  patterns.rs  statements.rs
src/vm/: byte_utils.rs  bytecode.rs  disassembler.rs  error.rs  gc.rs  mod.rs  stack.rs  tests.rs  value.rs
(+56 files in other folders)
