[package]
name = "steel_lang"
version = "0.6.1"
edition = "2024"

[features]
debug_trace_execution = []
debug_stack_execution = []
debug_gc = []
stress_gc = []

[dependencies]
ariadne = "0.4.1"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "vm_bench"
harness = false
